Ensure to invalidate compositing inputs on svg overflow change.

This patch ensures that we dirty the compositing inputs if our svg root
has visible overflow and that overflow changes.

R=chrishtr@chromium.org, pdr@chromium.org
TBR=vmpstr@chromium.org

(cherry picked from commit aa5f04fe8bb318567e807c7a5650639fb9c50616 [formerly 29b5904fa94cfcc838990f2cc731662a79979c46])

Bug: 899291
Change-Id: Iaaa0eb7f48b9855af141e6b3d79d3a1667c6e38f
Reviewed-on: https://chromium-review.googlesource.com/c/1306408
Commit-Queue: vmpstr <vmpstr@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#603725}
Reviewed-on: https://chromium-review.googlesource.com/c/1311088
Reviewed-by: vmpstr <vmpstr@chromium.org>
Cr-Commit-Position: refs/branch-heads/3578@{#438}
Cr-Branched-From: abbd18012032883c3113b3bfc5d59d25b4836c5f [formerly 4226ddf99103e493d7afb23a4c7902ee496108b6]-refs/heads/master@{#599034}
Former-commit-id: 3075c459af7d475892d868fcfd430fabc6fab42d